--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "^3.4.3",
     "@capacitor/app": "1.1.0",
-    "@capacitor/core": "^3.4.0",
+    "@capacitor/core": "3.4.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
@@ -67,7 +66,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "^3.4.0"
+    "@capacitor/cli": "3.4.0"
   },
   "description": "An Ionic project"
 }
