--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@awesome-cordova-plugins/splash-screen": "^5.41.0",
     "@capacitor/android": "^3.4.3",
     "@capacitor/app": "1.1.0",
     "@capacitor/core": "^3.4.3",
@@ -21,6 +22,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "cordova-plugin-splashscreen": "^6.0.1",
     "cordova-sqlite-storage": "^6.0.0",
     "ionicons": "^5.4.0",
     "process": "^0.11.10",
